--- a/src/components/Banner/banner.module.css
+++ b/src/components/Banner/banner.module.css
@@ -47,7 +47,10 @@
     /* color: #fff; */
     font-weight: 700;
     font-size: 20px;
-    margin-top: 60px;
+    padding: 8px 10px;
+    border: 1px solid black;
+    border-radius: 20px;
+    margin-top: 40px;
     letter-spacing: 0.8px;
     display: flex;
     align-items: center;
