--- a/src/components/Banner/banner.module.css
+++ b/src/components/Banner/banner.module.css
@@ -1,16 +1,9 @@
 .imgBanner{
-    width: 400px;
-}
-.divContainter{
-    display: flex;
     width: 100%;
-}
-.divImg{
-    width: -10%;
 }
 .banner{
     margin-top: -80px;
-    padding: 260px 0 100px 0;
+    padding: 260px 0 200px 0;
     background-image: url(../../assets/img/5437630.jpg);
     /* background-image: url(../../assets/img/banner-bg.png); */
     /* background-image: url(https://img.freepik.com/vector-gratis/fondo-galaxia-realista_23-2148965897.jpg?w=996&t=st=1671127329~exp=1671127929~hmac=db75d7d99f8cba6df1bbc24728133180646ddbb984fffd64c320db0d157d8165); */
@@ -18,7 +11,7 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
-.tagline {
+.banner .tagline {
     font-weight: 700;
     letter-spacing: 0.8px;
     padding: 8px 10px;
