--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -65,6 +65,7 @@
 }
 .contact form button:hover {
     color: #fff;
+    border-radius: 18px;
 }
 .contact form button::before {
     content: "";
@@ -76,7 +77,9 @@
     left: 0;
     z-index: 0;
     transition: 0.3s ease-in-out;
+    border-radius: 18px;
   }
   .contact form button:hover::before {
     width: 100%;
+    border-radius: 18px;
   }
