--- a/src/components/ProjectCard/projectcard.module.css
+++ b/src/components/ProjectCard/projectcard.module.css
@@ -1,4 +1,4 @@
-.projimgbx {
+/* .projimgbx {
     position: relative;
     border-radius: 30px;
     overflow: hidden;
@@ -48,4 +48,4 @@ height: 420px;
     font-weight: 400;
     font-size: 15px;
     letter-spacing: 0.8px;
-}
+} */
