--- a/src/components/Projects/projects.module.css
+++ b/src/components/Projects/projects.module.css
@@ -77,5 +77,68 @@
     width: 35%;
     right: 0;
     z-index: -4;
-    
+}
+/* -----------------------CARD -------------------------------------------------*/
+.projimgbx {
+    position: relative;
+    border-radius: 30px;
+    overflow: hidden;
+    margin-bottom: 24px;
+    height: 90%;
+}
+.projimgbx img {
+height: 420px;
+}
+.projimbgx::before {
+    content: '';
+    background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+    opacity: 0.85;
+    position: absolute;
+    width: 100%;
+    height: 0;
+    transition: 0.4s ease-in-out;
+}
+.projimgbx:hover::before {
+    height: 100%;
+}
+.projtxtx {
+    position: absolute;
+    text-align: center;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: 0.5s ease-in-out;
+    opacity: 0;
+    width: 100%;
+}
+.projimgbx:hover .projtxtx {
+    top: 50%;
+    opacity: 1;
+    background-color: black;
+    border: 1px solid;
+    border-radius: 10px;
+}
+.projtxtx h4 {
+    font-size: 30px;
+    font-weight: 700;
+    letter-spacing: 0.8px;
+    line-height: 1.1em;
+}
+.projtxtx span {
+    font-size: italic;
+    font-weight: 400;
+    font-size: 15px;
+    letter-spacing: 0.8px;
+}
+.buttonCard{
+    font-weight: 700;
+    font-size: 14px;
+    padding: 8px 10px;
+    border: 1px solid black;
+    border-radius: 20px;
+    letter-spacing: 0.8px;
+    margin-left: 10px;
+}
+.buttonCard:hover svg{
+    margin-left: 10px;
 }
